@@ -1,1 +1,1 @@
-ze-filter-0.5.0-develop-180211
+ze-filter-0.6.0-develop-180212
