@@ -17,10 +17,5 @@ aux/set-release
 
 set -x
 
-autoheader
-aclocal -I m4
-libtoolize -i -c --no-warnings -q --recursive --automake
-#libtoolize -c -f --automake
-automake --add-missing -c
-autoconf 
+autoreconf
 
