@@ -1,5 +1,5 @@
 # Makefile.in generated by automake 1.15.1 from Makefile.am.
-# config/cdb/Makefile.  Generated from Makefile.in by configure.
+# config/etc/Makefile.  Generated from Makefile.in by configure.
 
 # Copyright (C) 1994-2017 Free Software Foundation, Inc.
 
@@ -11,6 +11,7 @@
 # but WITHOUT ANY WARRANTY, to the extent permitted by law; without
 # even the implied warranty of MERCHANTABILITY or FITNESS FOR A
 # PARTICULAR PURPOSE.
+
 
 
 
@@ -87,7 +88,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = x86_64-pc-linux-gnu
 host_triplet = x86_64-pc-linux-gnu
-subdir = config/cdb
+subdir = config/etc
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/acinclude.m4 \
 	$(top_srcdir)/m4/libtool.m4 $(top_srcdir)/m4/ltoptions.m4 \
@@ -98,7 +99,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 DIST_COMMON = $(srcdir)/Makefile.am $(am__DIST_COMMON)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/include/config.h
-CONFIG_CLEAN_FILES = Makefile.org update-db.sh.org
+CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 AM_V_P = $(am__v_P_$(V))
 am__v_P_ = $(am__v_P_$(AM_DEFAULT_VERBOSITY))
@@ -119,9 +120,37 @@ am__can_run_installinfo = \
     n|no|NO) false;; \
     *) (install-info --version) >/dev/null 2>&1;; \
   esac
+am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
+am__vpath_adj = case $$p in \
+    $(srcdir)/*) f=`echo "$$p" | sed "s|^$$srcdirstrip/||"`;; \
+    *) f=$$p;; \
+  esac;
+am__strip_dir = f=`echo $$p | sed -e 's|^.*/||'`;
+am__install_max = 40
+am__nobase_strip_setup = \
+  srcdirstrip=`echo "$(srcdir)" | sed 's/[].[^$$\\*|]/\\\\&/g'`
+am__nobase_strip = \
+  for p in $$list; do echo "$$p"; done | sed -e "s|$$srcdirstrip/||"
+am__nobase_list = $(am__nobase_strip_setup); \
+  for p in $$list; do echo "$$p $$p"; done | \
+  sed "s| $$srcdirstrip/| |;"' / .*\//!s/ .*/ ./; s,\( .*\)/[^/]*$$,\1,' | \
+  $(AWK) 'BEGIN { files["."] = "" } { files[$$2] = files[$$2] " " $$1; \
+    if (++n[$$2] == $(am__install_max)) \
+      { print $$2, files[$$2]; n[$$2] = 0; files[$$2] = "" } } \
+    END { for (dir in files) print dir, files[dir] }'
+am__base_list = \
+  sed '$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;s/\n/ /g' | \
+  sed '$$!N;$$!N;$$!N;$$!N;s/\n/ /g'
+am__uninstall_files_from_dir = { \
+  test -z "$$files" \
+    || { test ! -d "$$dir" && test ! -f "$$dir" && test ! -r "$$dir"; } \
+    || { echo " ( cd '$$dir' && rm -f" $$files ")"; \
+         $(am__cd) "$$dir" && rm -f $$files; }; \
+  }
+am__installdirs = "$(DESTDIR)$(sysconfdir)"
+DATA = $(sysconf_DATA)
 am__tagged_files = $(HEADERS) $(SOURCES) $(TAGS_FILES) $(LISP)
-am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.org.in \
-	$(srcdir)/update-db.sh.org.in $(top_srcdir)/mkinstalldirs
+am__DIST_COMMON = $(srcdir)/Makefile.in $(top_srcdir)/mkinstalldirs
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = ${SHELL} /data/FOSS/dev-ze-filter/ze-filter/missing aclocal-1.15
 AMTAR = $${TAR-tar}
@@ -218,8 +247,8 @@ XFILES_DEF = ade adp app bas bat bin btm chm cmd com cpl csh dll drv exe fxp hlp
 ZEGREYDDIR = /var/ze-filter/ze-greydb
 ZEINCS = -I/data/FOSS/dev-ze-filter/ze-filter/libze/include -I/data/FOSS/dev-ze-filter/ze-filter/libzechk/include -I/data/FOSS/dev-ze-filter/ze-filter/libml/include -I/data/FOSS/dev-ze-filter/ze-filter/libzefilter/include -I/data/FOSS/dev-ze-filter/ze-filter/libpcre -I/data/FOSS/dev-ze-filter/ze-filter/libdb
 ZELIBS =  -L/data/FOSS/dev-ze-filter/ze-filter/libjoe -ljoe -L/data/FOSS/dev-ze-filter/ze-filter/libml/src -lml -L/data/FOSS/dev-ze-filter/ze-filter/libzechk/src -lzechk -L/data/FOSS/dev-ze-filter/ze-filter/libs -lcommon -L/data/FOSS/dev-ze-filter/ze-filter/libze/src -lze
-abs_builddir = /data/FOSS/dev-ze-filter/ze-filter/config/cdb
-abs_srcdir = /data/FOSS/dev-ze-filter/ze-filter/config/cdb
+abs_builddir = /data/FOSS/dev-ze-filter/ze-filter/config/etc
+abs_srcdir = /data/FOSS/dev-ze-filter/ze-filter/config/etc
 abs_top_builddir = /data/FOSS/dev-ze-filter/ze-filter
 abs_top_srcdir = /data/FOSS/dev-ze-filter/ze-filter
 ac_ct_AR = ar
@@ -273,29 +302,20 @@ top_builddir = ../..
 top_srcdir = ../..
 CDBDIR = /var/ze-filter/cdb
 CFDIR = /etc/ze-filter
-POLICY_SRC = \
- ze-policy.z-grey.txt.org \
- ze-policy.z-badmx.txt.org \
- ze-policy.z-iana.txt.org \
- ze-policy.z-defaults.txt.org
+ZEFILTER = $(top_srcdir)/src/ze-filter
+sysconf_DATA = ze-filter.cf.org \
+ ze-error-msg.org \
+ ze-regex.org \
+ ze-oracle.org \
+ ze-xfiles.org \
+ ze-modules.org \
+ ze-tables.org \
+ ze-ndc.cf.org
 
-cdb_install = ze-policy.z-grey.txt.org \
- ze-policy.z-badmx.txt.org \
- ze-policy.z-iana.txt.org \
- ze-policy.z-defaults.txt.org
+etc_upgrade = ze-filter.cf.org \
+ ze-oracle.org
 
-cdb_remove = ze-policy.grey.txt.org \
- ze-policy.badmx.txt.org
-
-cdb_preserve = ze-policy.20-base.txt.org \
- ze-policy.30-local.txt.org \
- ze-rcpt.txt.org \
- ze-bayes.txt.org \
- ze-urlbl.txt.org \
- Makefile.org
-
-script_preserve = update-db.sh.org
-OBJECTS = ze-policy.txt.org 
+OBJECTS = ze-filter.cf.default ze-filter.cf.running ze-filter.cf.null
 all: all-am
 
 .SUFFIXES:
@@ -308,9 +328,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu config/cdb/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu config/etc/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu config/cdb/Makefile
+	  $(AUTOMAKE) --gnu config/etc/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
@@ -328,16 +348,33 @@ $(top_srcdir)/configure:  $(am__configure_deps)
 $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
-Makefile.org: $(top_builddir)/config.status $(srcdir)/Makefile.org.in
-	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-update-db.sh.org: $(top_builddir)/config.status $(srcdir)/update-db.sh.org.in
-	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
 mostlyclean-libtool:
 	-rm -f *.lo
 
 clean-libtool:
 	-rm -rf .libs _libs
+install-sysconfDATA: $(sysconf_DATA)
+	@$(NORMAL_INSTALL)
+	@list='$(sysconf_DATA)'; test -n "$(sysconfdir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(sysconfdir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(sysconfdir)" || exit 1; \
+	fi; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; \
+	done | $(am__base_list) | \
+	while read files; do \
+	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(sysconfdir)'"; \
+	  $(INSTALL_DATA) $$files "$(DESTDIR)$(sysconfdir)" || exit $$?; \
+	done
+
+uninstall-sysconfDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(sysconf_DATA)'; test -n "$(sysconfdir)" || list=; \
+	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
+	dir='$(DESTDIR)$(sysconfdir)'; $(am__uninstall_files_from_dir)
 tags TAGS:
 
 ctags CTAGS:
@@ -377,8 +414,11 @@ distdir: $(DISTFILES)
 	done
 check-am: all-am
 check: check-am
-all-am: Makefile
+all-am: Makefile $(DATA)
 installdirs:
+	for dir in "$(DESTDIR)$(sysconfdir)"; do \
+	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
+	done
 install: install-am
 install-exec: install-exec-am
 install-data: install-data-am
@@ -432,7 +472,7 @@ install-dvi: install-dvi-am
 
 install-dvi-am:
 
-install-exec-am:
+install-exec-am: install-sysconfDATA
 
 install-html: install-html-am
 
@@ -470,7 +510,7 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am:
+uninstall-am: uninstall-sysconfDATA
 
 .MAKE: install-am install-data-am install-strip
 
@@ -481,69 +521,62 @@ uninstall-am:
 	install-data-hook install-dvi install-dvi-am install-exec \
 	install-exec-am install-html install-html-am install-info \
 	install-info-am install-man install-pdf install-pdf-am \
-	install-ps install-ps-am install-strip installcheck \
-	installcheck-am installdirs maintainer-clean \
+	install-ps install-ps-am install-strip install-sysconfDATA \
+	installcheck installcheck-am installdirs maintainer-clean \
 	maintainer-clean-generic mostlyclean mostlyclean-generic \
 	mostlyclean-libtool pdf pdf-am ps ps-am tags-am uninstall \
-	uninstall-am
+	uninstall-am uninstall-sysconfDATA
 
 .PRECIOUS: Makefile
 
 
 all: $(OBJECTS)
 
-ze-policy.txt.org : $(POLICY_SRC)
-	cat $(POLICY_SRC) > ze-policy.txt.org
-
 distclean::clean-hook
 
 clean:: clean-hook
 
 clean-hook:
-	rm -f $(OBJECTS) 
+	rm -f $(OBJECTS) ze-filter.cf.org
 
 realclean: clean-hook clean-cache distclean
 
-iana:
-	../bin/get-iana > ze-policy.z-iana.txt.org
+ze-filter.cf.org: ze-filter.cf.running
+	cp -p ze-filter.cf.running ze-filter.cf.org
 
-install-data-hook: 
-	@mkdir -p $(DESTDIR)/var/ze-filter/cdb
-	@chmod 755 $(DESTDIR)/var/ze-filter/cdb
-	@chown ze-filter $(DESTDIR)/var/ze-filter/cdb
-	@chgrp ze-filter $(DESTDIR)/var/ze-filter/cdb
-	@list='$(cdb_remove)'; for file in $$list ;\
-	do \
-	  conf=`basename $$file .org` ;\
-	  rm -f $(DESTDIR)/$(CDBDIR)/$$conf ;\
-	done
-	@list='$(cdb_install)'; for file in $$list ;\
-	do \
-	  conf=`basename $$file .org` ;\
-	  if [ -f $(DESTDIR)/$(CDBDIR)/$$conf ] ; then \
-	    mv $(DESTDIR)/$(CDBDIR)/$$conf $(DESTDIR)/$(CDBDIR)/$$conf.old ; \
-	  fi ; \
-	  $(INSTALL_DATA) $$file $(DESTDIR)/$(CDBDIR)/$$conf ; \
-	done
-	@list='$(cdb_preserve)'; for file in $$list ;\
-	do \
-	  conf=`basename $$file .org` ;\
-	  if [ ! -f $(DESTDIR)/$(CDBDIR)/$$conf ] ; then \
-	    $(INSTALL_DATA) $$file $(DESTDIR)/$(CDBDIR)/$$conf ;\
-	  fi ; \
-	  $(INSTALL_DATA) $$file $(DESTDIR)/$(CDBDIR)/$$file ;\
-	done
-	@list='$(script_preserve)'; for file in $$list ;\
-	do \
-	  conf=`basename $$file .org` ;\
-	  if [ ! -f $(DESTDIR)/$(CDBDIR)/$$conf ] ; then \
-	    $(INSTALL_SCRIPT) $$file $(DESTDIR)/$(CDBDIR)/$$conf ;\
-	  fi ; \
-	  $(INSTALL_SCRIPT) $$file $(DESTDIR)/$(CDBDIR)/$$file ;\
-	done
+ze-filter.cf.running: $(ZEFILTER) ze-filter.cf.default
+	cp -p ze-filter.cf.default ze-filter.cf.running
+	if [ -f $(DESTDIR)/$(CFDIR)/ze-filter.cf ] ; then \
+	  $(ZEFILTER) -M running | ./update_running_cf > ze-filter.cf.running ;\
+	fi
 
-upgrade : 
-	@echo "   * upgrade in cdb directory"
+ze-filter.cf.default: $(ZEFILTER)
+	$(ZEFILTER) -M default > ze-filter.cf.default
+
+ze-filter.cf.null: $(ZEFILTER)
+	$(ZEFILTER) -M null > ze-filter.cf.null
+
+install-data-hook: ze-filter.cf.running ze-filter.cf.default ze-filter.cf.null
+	@list='$(sysconf_DATA)'; for file in $$list ;\
+	do \
+	  conf=`basename $$file .org` ;\
+	  if [ ! -f $(DESTDIR)/$(CFDIR)/$$conf ] ; then \
+	    $(INSTALL_DATA) $$file $(DESTDIR)/$(CFDIR)/$$conf ; \
+	  fi ; \
+	done
+	cp ze-filter.cf.default ze-filter.cf.running $(DESTDIR)/$(CFDIR)/
+
+upgrade : ze-filter.cf.org
+	@echo "   * upgrade in etc directory"
+	@list='$(etc_upgrade)'; for file in $$list ;\
+	do \
+	  conf=`basename $$file .org` ;\
+	  echo "   *   upgrading $$conf" ;\
+	  if [ -f $(DESTDIR)/$(CFDIR)/$$conf ] ; then \
+	    mv $(DESTDIR)/$(CFDIR)/$$conf $(DESTDIR)/$(CFDIR)/$$conf.old ; \
+	  fi ; \
+	  $(INSTALL_DATA) $$file $(DESTDIR)/$(CFDIR)/$$conf ; \
+	done
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
