@@ -128,7 +128,7 @@ am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/ze-filter.init.in \
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = ${SHELL} /data/FOSS/dev-ze-filter/ze-filter/missing aclocal-1.15
 AMTAR = $${TAR-tar}
-AM_DEFAULT_VERBOSITY = 1
+AM_DEFAULT_VERBOSITY = 0
 AR = ar
 AUTOCONF = ${SHELL} /data/FOSS/dev-ze-filter/ze-filter/missing autoconf
 AUTOHEADER = ${SHELL} /data/FOSS/dev-ze-filter/ze-filter/missing autoheader
@@ -139,7 +139,7 @@ BDBINCS = -I../libdb/
 BDBLIBS = -L../libdb -ldb
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFARGS = 
+CFARGS = --enable-silent-rules
 CFLAGS = -pthread 
 CONFDIR = /etc/ze-filter
 COPYRIGHT = Copyright (c) 2001-2018 - Jose-Marcio Martins da Cruz
@@ -215,7 +215,7 @@ STRIP = strip
 TOPDIR = /data/FOSS/dev-ze-filter/ze-filter
 UNAME = Linux perere.paris.ensmp.fr 4.14.13-300.fc27.x86_64 #1 SMP Thu Jan 11 04:00:01 UTC 2018 x86_64 x86_64 x86_64 GNU/Linux
 USER = ze-filter
-VERSION = ze-filter-0.5.0-develop-180211
+VERSION = ze-filter-0.6.0-develop-180212
 WORKROOT = /var/ze-filter
 XFILES_DEF = ade adp app bas bat bin btm chm cmd com cpl csh dll drv exe fxp hlp hta inf ini ins isp js jse ksh lnk mdb mde mdt mdw msc msi msp mst ops pcd pif prg reg scr sct shb shs sys url vb vbe vbs vxd wsc wsf wsh xmf
 ZEGREYDDIR = /var/ze-filter/ze-greydb
