@@ -13,6 +13,9 @@
 
 
 
+  ze-filter runs now as user:group ze-filter:ze-filter. This user:group shall exists before installation of the filter. Maybe :
+
+    useradd -d /var/ze-filter -s /bin/bash -m -u 900 ze-filter
   * Some references to /usr/bin/... at some commands inside config/startup/Makefile and startup files. Noticed by Guy Carre
   * Some small bugs in ''systemd'' startup files - noticed by Dudi Goldenberg.
   * A script update-db.sh replacing both /var/ze-filter/cdb/get-urlbl and /var/ze-filter/cdb/get-bayes : simpler and more reliable.
